@startuml
package "Application Layer" {
    class User {
        + id: number
        + name: string
        + posts: Post[]
    }
}

package "Decorator Layer" {
    class "@Entity" as Entity << (D,orchid) function >> {
        + Entity(tableName)
    }
    class "@MappedSuperclass" as MappedSuperclass << (D,orchid) function >> {
        + MappedSuperclass()
    }
    class "@Column" as Column << (D,orchid) function >> {
        + Column(options)
    }
    class "@OneToOne" as OneToOne << (D,orchid) function >> {
        + OneToOne(typeFunction, options)
    }
    class "@OneToMany" as OneToMany << (D,orchid) function >> {
        + OneToMany(typeFunction, inverseSide)
    }
    class "@ManyToOne" as ManyToOne << (D,orchid) function >> {
        + ManyToOne(typeFunction, inverseSide)
    }
    class "@ManyToMany" as ManyToMany << (D,orchid) function >> {
        + ManyToMany(typeFunction, options)
    }
}

package "Metadata Layer" {
    class "EntityStore" as Store <<singleton>> {
        - entityMetadata: Map<Constructor, EntityMetadata> 
        + ensureEntityMetadata()
        + upsertColumn()
        + addOrUpdateRelation()
    }

    class EntityMetadata <<struct>> {
        + tableName: string
        + isMappedSuperclass: boolean
        + columns: ColumnMetadata[]
        + relations: RelationMetadata[]
    }
}

' Relationships
User <-- Entity : <<decorates class>>
User <-- MappedSuperclass : <<decorates class>>
User <-- Column : <<decorates property>>
User <-- OneToOne : <<decorates property>>
User <-- OneToMany : <<decorates property>>
User <-- ManyToOne : <<decorates property>>
User <-- ManyToMany : <<decorates property>>

Entity ..> Store : calls ensureEntityMetadata()
MappedSuperclass ..> Store : calls ensureEntityMetadata()
Column ..> Store : calls upsertColumn()
OneToOne ..> Store : calls addOrUpdateRelation()
OneToMany ..> Store : calls addOrUpdateRelation()
ManyToOne ..> Store : calls addOrUpdateRelation()
ManyToMany ..> Store : calls addOrUpdateRelation()

Store *-- EntityMetadata : contains
@enduml
